crates/keron-lang/tests/corpus/errors/parse/fn_empty_body.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found '}' expected something else, '#', '"val"', '-', '"', '"true"', '"false"', int, '[', '{', '"if"', identifier, or '('
  --> 1:21
  |
1 | fn nothing(): Int { }
  |                     ^
